--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -49,7 +49,7 @@
             <li class="comments_list">
               <% @comments.each do |comment|%>
                 <p>
-                  <%= link_to comment.user.name, "/users/#{@prototype.user.id}", class: :comment_user %>
+                  <%= link_to comment.user.name, "/users/#{comment.user_id}", class: :comment_user %>
                   <%= comment.text %>
                 </p>
               <% end %>
